# pandas-polars-pyspark

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_and_deploy.yaml  deploy.yaml  lint_and_test.yaml
cli_scripts/: delete_bucket_objects.sh  delete_images.sh  deploy_image.sh  set_cloud_build_env.sh  set_local_build_env.sh  submit_batch.sh  upload_data_folder.sh
config/: config.yml
scripts/: feature_engineering.py  feature_engineering_pandas.py  launch.py  partition_data.py
src/ppp/: __init__.py  common.py  pandas.py  polars.py  util.py  version.py
terraform/: main.tf
terraform/compute/: compute.tf  main.tf  variables.tf
terraform/storage/: main.tf
tests/: conftest.py  df_fixtures.py  pytest.ini  test_common.py  test_pandas.py  test_polars.py  test_util.py
