[tool.poetry]
name = "ppp"
version = "0.1.0"
description = "This project contains the code for the pandas-polars-pyspark (PPP) experiment."
authors = ["James Richardson <james.richardson.2556@gmail.com>"]
license = "Proprietary"
packages = [
    { include = "ppp", from = "src" },
]
include = ["src/ppp/res/*"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
faker = "^18.11.2"
pandas = "^2.0.3"
polars = "^0.18.5"
pyarrow = "^12.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10"
pre-commit = "^2.20"
pytest = "^7.2"
pytest-cov = "^4.0"
psutil = "^5.9.5"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
